@@ -1,4 +1,4 @@
-# Copyright 2011-2013 Free Software Foundation, Inc.
+# Copyright 2011 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -36,22 +36,3 @@ gdb_test "print simple\[2\]" "= 99 L'c'"
 
 gdb_test "print difficile\[2\]" "= 65261 L'\\\\xfeed'"
 
-set cent "\\\\242"
-gdb_test "print repeat" "= L\"A\", '$cent' <repeats 21 times>, \"B.*"
-
-global hex
-gdb_test "print repeat_p" \
-    "= $hex L\"A\", '$cent' <repeats 21 times>, \"B\""
-
-gdb_test_no_output "set print null on"
-
-gdb_test "print repeat" "= L\"A\", '$cent' <repeats 21 times>, \"B\"" \
-    "print repeat (print null on)"
-
-gdb_test_no_output "set print elements 3"
-
-gdb_test "print repeat" "= L\"A$cent$cent\"\.\.\." \
-    "print repeat (print elements 3)"
-
-gdb_test "print repeat_p" "= $hex L\"A$cent$cent\"\.\.\." \
-    "print repeat_p (print elements 3)"
